--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "i18next": "^21.6.10",
     "i18next-browser-languagedetector": "^6.1.3",
     "i18next-http-backend": "^1.3.2",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-awesome-loaders": "^0.1.37",
     "react-dom": "^17.0.2",
